Fix css on mobile display for weather and camp containers

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   margin: 0 auto;
   max-width: 375px;
-  height: 774px;
+  height: 700px;
 }
 
 .App-title {
