--- a/src/containers/Campsite/index.css
+++ b/src/containers/Campsite/index.css
@@ -1,6 +1,16 @@
 div {
   color: aliceblue;
-  overflow-y: auto;
+  overflow-y: scroll;
+}
+
+.camplist1 {
+  height: 665px;
+  overflow: auto;
+}
+
+.height-control {
+  margin-top: 2rem;
+  height: 600px;
 }
 
 .campinfo-header {
@@ -30,7 +40,7 @@ div {
 
 .campground-city {
   font-size: 1.5rem;
-  margin-bottom: 0;
+  margin-bottom: 0.3rem;
   font-weight: bold;
   letter-spacing: 0.1rem;
 }
@@ -41,6 +51,7 @@ div {
   overflow-x: scroll;
   height: 12rem;
   font-size: 1.4rem;
+  margin-bottom: 2rem;
   background: rgb(41, 44, 48, 0.75);
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -56,6 +67,7 @@ div {
   overflow-x: scroll;
   height: 12rem;
   font-size: 1.4rem;
+  margin-bottom: 2rem;
   background: rgb(41, 44, 48, 0.75);
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
@@ -72,6 +84,7 @@ div {
   color: aliceblue;
   overflow-x: scroll;
   letter-spacing: 0.1rem;
+  margin-bottom: 1rem;
   height: 10rem;
   font-size: 1.4rem;
   background: rgb(41, 44, 48, 0.75);
