--- a/src/containers/CampsiteList/index.css
+++ b/src/containers/CampsiteList/index.css
@@ -3,7 +3,7 @@ h2 {
   font-size: 3rem;
   padding-top: 0;
   padding-bottom: 0.5rem;
-  margin-top: 4rem;
+  margin-top: 4.5rem;
   margin-bottom: 0;
 }
 
@@ -17,7 +17,7 @@ a {
 }
 
 .camp-container {
-  height: 200px;
+  height: 225px;
 }
 
 .campground-list {
@@ -26,7 +26,6 @@ a {
   align-items: flex-start;
   margin-left: 1rem;
   font-size: 1.3rem;
-  overflow-y: scroll;
   padding-top: 0.75rem;
   height: 1000px;
 }
@@ -58,6 +57,6 @@ a {
   padding-left: 3.2rem;
 }
 
-img {
+.map {
   width: 300px;
 }
